[package]
name = "geosteiner"
version = "0.1.0"
authors = ["Geosteiner: David M. Warme, Pawel Winter and Martin Zachariasen", "Rust Wrapper: Max Göttlicher"]
edition = "2018"
license = "CC-BY-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71"
autotools = "0.2"
