[package]
name = "geosteiner"
description = "compute Euclidean and recitlinear Steiner trees using the geosteiner C library"
repository = "https://github.com/CinusMinus/geosteiner"
version = "0.1.0"
authors = ["Geosteiner: David M. Warme, Pawel Winter and Martin Zachariasen", "Rust Wrapper: Max Göttlicher"]
edition = "2018"
license = "CC-BY-4.0"
keywords = ["steiner-tree", "optimization", "geometry"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71"
autotools = "0.2"
