[package]
name = "geosteiner"
version = "0.1.0"
authors = ["Copyright (c) 1998, 2015 by GeoSteiner, Inc", "Rust wrapper: Max Göttlicher <max.goettlicher@gmx.de>"]
edition = "2018"
license = "CC-BY-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"]}
pkg-config = "0.3.19"
bindgen = "0.58"
autotools = "0.2"